--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -1,10 +1,11 @@
 .DocPage {}
 
 .DocPage-revisionPicker {
+  .m-content;
   display: flex;
   align-items: center;
   margin-bottom: 25px;
-  padding: @global-content-padding (2.5 * @global-content-padding) @global-content-padding @global-content-padding;
+  padding-right: 2.5 * @global-content-padding;
 }
 
 .DocPage-revisionPickerLabel {
