--- a/src/components/pages/edit-doc.less
+++ b/src/components/pages/edit-doc.less
@@ -1,9 +1,11 @@
 .EditDocPage {}
 
 .EditDocPage-docEditor {
-  padding: @global-content-padding @global-content-padding (2 * @global-content-padding) @global-content-padding;
+  .m-content;
+  margin-bottom: @global-content-padding;
 }
 
 .EditDocPage-addSectionButton {
-  padding: (2 * @global-content-padding) @global-content-padding @global-content-padding @global-content-padding;
+  .m-content;
+  margin-top: @global-content-padding;
 }
