--- a/src/components/pages/edit-menu.less
+++ b/src/components/pages/edit-menu.less
@@ -12,7 +12,9 @@
 @draggable-bg-color: @grey-5;
 @draggable-bg-active-color: @grey-6;
 
-.EditMenuPage {}
+.EditMenuPage {
+  .m-content;
+}
 
 .EditMenuPage-editor {
   display: flex;
