--- a/src/styles/section.less
+++ b/src/styles/section.less
@@ -1,3 +1,7 @@
+// Pure CSS class because it is used by
+// * src/components/pages/edit-doc.jsx
+// * src/components/section-display.jsx
+
 @section-min-height: 36px;
 @active-section-border-width: 1px;
 @active-section-border-color: @grey-7;
