--- a/src/components/pages/complete-password-reset.less
+++ b/src/components/pages/complete-password-reset.less
@@ -1,5 +1,5 @@
 .CompletePasswordResetPage {
-  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
+  .m-content-fullscreen;
 }
 
 .CompletePasswordResetPage-title {
