--- a/src/components/pages/complete-registration.less
+++ b/src/components/pages/complete-registration.less
@@ -1,5 +1,5 @@
 .CompleteRegistrationPage {
-  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
+  .m-content-fullscreen;
 }
 
 .CompleteRegistrationPage-title {
