--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -1,5 +1,5 @@
 .LoginPage {
-  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
+  .m-content-fullscreen;
 }
 
 .LoginPage-title {
