--- a/src/components/pages/register.less
+++ b/src/components/pages/register.less
@@ -1,5 +1,5 @@
 .RegisterPage {
-  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
+  .m-content-fullscreen;
 }
 
 .RegisterPage-title {
