--- a/src/components/pages/reset-password.less
+++ b/src/components/pages/reset-password.less
@@ -1,5 +1,5 @@
 .ResetPasswordPage {
-  padding: @global-content-padding @global-content-padding 20vh @global-content-padding;
+  .m-content-fullscreen;
 }
 
 .ResetPasswordPage-title {
