--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -17,3 +17,5 @@
 @global-elmu-blue: @primary-color;
 @global-text-color: @text-color;
 @global-error-color: @error-color;
+
+@phone: ~"screen and (max-width: 480px)";
