Fix settings page class names

--- a/src/components/pages/settings.less
+++ b/src/components/pages/settings.less
@@ -2,20 +2,20 @@
   .m-content;
 }
 
-.SettingPage-formItem {
+.SettingsPage-formItem {
   display: flex;
 }
 
-.SettingPage-formItemLabel {
+.SettingsPage-formItemLabel {
   flex: none;
   margin-right: 25px;
 }
 
-.SettingPage-formItemInput {
+.SettingsPage-formItemInput {
   flex: 1 0 0%;
 }
 
-.SettingPage-submitButton {
+.SettingsPage-submitButton {
   margin-top: 25px;
   text-align: right;
 }
