Add some styling and sorting

--- a/src/components/pages/docs.less
+++ b/src/components/pages/docs.less
@@ -1,3 +1,13 @@
 .DocsPage {
   .m-content;
 }
+
+.DocsPage-search {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+
+.DocsPage-searchField {
+  max-width: 360px;
+}
