Create new credit component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -54,6 +54,7 @@ h2 {
 @import '../components/repository-browser.less';
 @import '../components/media-control.less';
 @import '../components/deleted-section.less';
+@import '../components/article-credits.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
