Add permilank function

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -17,3 +17,9 @@
 .DocPage-revisionPickerSlider {
   flex: 1 0 0%;
 }
+
+.DocPage-revisionPickerResetButton {
+  flex: none;
+  padding-left: 2em;
+  padding-bottom: 1em;
+}
