First version of Anavis plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -62,6 +62,7 @@ h2 {
 @import '../styles/section.less';
 
 // Plugin styles
+@import '../plugins/anavis/anavis.less';
 @import '../plugins/markdown/markdown.less';
 @import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/quick-tester/quick-tester.less';
