Add Anavis editor

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -51,6 +51,7 @@ h2 {
 @import '../components/error-root.less';
 @import '../components/menu-doc-ref.less';
 @import '../components/audio-player.less';
+@import '../components/color-picker.less';
 @import '../components/repository-browser.less';
 @import '../components/media-control.less';
 @import '../components/deleted-section.less';
