Emit link lists on menu pages for better indexability

--- a/src/components/pages/menu.less
+++ b/src/components/pages/menu.less
@@ -14,6 +14,14 @@
   flex: 3 0 0%;
 }
 
+.MenuPage-detailsItem {
+  display: none;
+
+  &.MenuPage-detailsItem--active {
+    display: block;
+  }
+}
+
 .MenuPage-categoryList {
   padding-left: 0;
   list-style-type: none;
