--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -16,6 +16,7 @@
 
 @global-elmu-blue: @primary-color;
 @global-text-color: @text-color;
+@global-heading-color: @heading-color;
 @global-error-color: @error-color;
 
 @phone: ~"screen and (max-width: 480px)";
