--- a/src/plugins/markdown/markdown.less
+++ b/src/plugins/markdown/markdown.less
@@ -1,7 +1,7 @@
-@markdown-blockquote-color: @orange-7;
+@markdown-blockquote-color: @blue-7;
 @markdown-blockquote-background-color: @grey-1;
 @markdown-blockquote-shadow-color: @grey-6;
-@markdown-blockquote-quotations-color: @grey-7;
+@markdown-blockquote-quotations-color: @blue-3;
 @markdown-table-border-color: @grey-7;
 @markdown-table-cell-text-color: @global-text-color;
 @markdown-table-header-background-color: fade(@blue-2, 60%);
