Add iframe plugin
Resolves #92

--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -13,6 +13,10 @@
   &.is-highlighted {
     border-color: @global-elmu-blue;
   }
+
+  &.is-invalid {
+    border-color: @global-error-color;
+  }
 }
 
 .Panel-content {
