--- a/src/components/pages/edit-menu.less
+++ b/src/components/pages/edit-menu.less
@@ -17,18 +17,21 @@
 }
 
 .EditMenuPage-editor {
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 2fr @edit-menu-editor-box-gutter 3fr;
 }
 
 .EditMenuPage-editorColumn {
-  flex: 1 0 0%;
+  grid-row: 1;
+  overflow: auto;
 
   &.EditMenuPage-editorColumn--left {
-    padding-right: (@edit-menu-editor-box-gutter / 2);
+    grid-column: 1;
   }
 
   &.EditMenuPage-editorColumn--right {
-    padding-left: (@edit-menu-editor-box-gutter / 2);
+    grid-column: 3;
   }
 }
 
@@ -59,8 +62,6 @@
 }
 
 .EditMenuPage-menuRefListItem {
-  display: flex;
-  align-items: center;
   background-color: @draggable-bg-color;
   border-radius: 3px;
   margin: 0 0 @edit-menu-ref-list-padding 0;
