--- a/src/components/pages/menu.less
+++ b/src/components/pages/menu.less
@@ -1,53 +1,32 @@
-@menu-page-gutter-width: 20px;
-
 .MenuPage {
   .m-content;
-  display: flex;
-}
-
-.MenuPage-categories {
-  flex: 1 0 0%;
-  padding-right: @menu-page-gutter-width;
-}
-
-.MenuPage-details {
-  flex: 3 0 0%;
-}
-
-.MenuPage-detailsItem {
-  display: none;
-
-  &.MenuPage-detailsItem--active {
-    display: block;
-  }
 }
 
 .MenuPage-categoryList {
-  padding-left: 0;
-  list-style-type: none;
-
-  .MenuPage-categoryList {
-    padding-left: 20px;
-  }
+  list-style: none;
+  padding: 0;
 }
 
-.MenuPage-categoryListItem {
-
-  &.u-level-0 {
-    font-weight: bold;
-  }
+.MenuPage-linkList {
+  list-style: none;
 }
 
 .MenuPage-linkListTitle {
   background-color: transparent;
-}
+  font-size: 100%;
+  font-weight: bold;
+  font-style: normal;
+  margin: 20px 0;
 
-.MenuPage-linkList {
-  background-color: transparent;
-  padding-left: 20px;
-}
+  &.u-level-0 {
+    font-size: 150%;
+    font-weight: bold;
+    font-style: normal;
+  }
 
-.MenuPage-linkListItem {
-  background-color: transparent;
-  list-style-type: none;
+  &.u-level-1 {
+    font-size: 115%;
+    font-weight: bold;
+    font-style: normal;
+  }
 }
