--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -8,6 +8,11 @@
 .IndexPage-title {
   .m-content;
   text-align: center;
+}
+
+.IndexPage-languageLinks {
+  .m-content;
+  text-align: center;
   margin-bottom: 16px;
 }
 
