Create plugin that integrates diagrams.net
Resolves #106

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -74,3 +74,4 @@ h2 {
 @import '../plugins/image-tiles/image-tiles.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/ear-training/ear-training.less';
+@import '../plugins/diagram-net/diagram-net.less';
