--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -24,15 +24,6 @@
 }
 
 .DocPage-revisionPickerButton {
-  margin-right: 6px;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &.ant-btn > span {
-    @media @phone {
-      display: none;
-    }
-  }
+  .m-icon-button;
+  .m-grouped-button;
 }
