--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -13,6 +13,7 @@
 @global-min-page-width: 200px;
 @global-content-width-wide: 1200px;
 @global-content-width-narrow: 800px;
+@global-button-spacing: 6px;
 
 @global-elmu-blue: @primary-color;
 @global-text-color: @text-color;
