ELMU #158 Show unknown plugin as unsupported section in view mode

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -60,6 +60,7 @@ h2 {
 @import '../components/media-control.less';
 @import '../components/deleted-section.less';
 @import '../components/credits-footer.less';
+@import '../components/not-supported-section.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
