ELMU #178 Re-introduce SVG country flag icons
Unicode based emojis are not displayed on Windows OS.
Therefore we have to fallback to the solution removed
in #139 using CSS with background images

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,9 @@
 @import '../../node_modules/antd/dist/antd.less';   // import official less entry file
 @import './ant-overrides.less';                     // override variables here
 
+@import '../../node_modules/flag-icon-css/less/flag-icon.less';
+@flag-icon-css-path: '/images/flags';
+
 @import (less) '../../node_modules/react-piano/dist/styles.css';
 @import (less) '../../node_modules/abcjs/abcjs-midi.css';
 
