ELMU #185 Fix styles with on index page

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -21,3 +21,11 @@
   margin-bottom: 32px;
   display: flex;
 }
+
+.IndexPage-searchInput {
+  flex: 1 1 100%
+}
+
+.IndexPage-searchButton {
+  flex: auto
+}
