EDU-5 Import LESS files from node module by package name

--- a/src/components/media-control.less
+++ b/src/components/media-control.less
@@ -5,11 +5,11 @@
 @media-control-progress-foreground-color: @grey-2;
 
 .MediaControl {
-  @import (less) '../../node_modules/react-soundplayer/styles/cover.css';
-  @import (less) '../../node_modules/react-soundplayer/styles/progress.css';
-  @import (less) '../../node_modules/react-soundplayer/styles/buttons.css';
-  @import (less) '../../node_modules/react-soundplayer/styles/volume.css';
-  @import (less) '../../node_modules/react-soundplayer/styles/icons.css';
+  @import (less) 'react-soundplayer/styles/cover.css';
+  @import (less) 'react-soundplayer/styles/progress.css';
+  @import (less) 'react-soundplayer/styles/buttons.css';
+  @import (less) 'react-soundplayer/styles/volume.css';
+  @import (less) 'react-soundplayer/styles/icons.css';
 
   // ---------- Overrides ------------------------------------v
 
