--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,11 +1,11 @@
-@import '../../node_modules/antd/dist/antd.less';   // import official less entry file
+@import 'antd/dist/antd.less';   // import official less entry file
 @import './ant-overrides.less';                     // override variables here
 
-@import '../../node_modules/flag-icon-css/less/flag-icon.less';
+@import 'flag-icon-css/less/flag-icon.less';
 @flag-icon-css-path: '/images/flags';
 
-@import (less) '../../node_modules/react-piano/dist/styles.css';
-@import (less) '../../node_modules/abcjs/abcjs-midi.css';
+@import (less) 'react-piano/dist/styles.css';
+@import (less) 'abcjs/abcjs-midi.css';
 
 // See also: https://ant.design/docs/spec/colors
 
