EDU-36 Remove elmu related references

--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -69,7 +69,7 @@
   font-family: 'Dancing Script';
   font-size: 72px;
   text-align: center;
-  color: @global-elmu-blue;
+  color: @global-educandu-blue;
   margin: 32px 0;
 }
 
