--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -1,5 +1,5 @@
 @index-page-help-button-shadow-color: @grey-8;
-@index-page-help-button-hover-shadow-color: @global-elmu-blue;
+@index-page-help-button-hover-shadow-color: @global-educandu-blue;
 
 .IndexPage {
   .m-fullscreen;
