--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -52,7 +52,7 @@ h2 {
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/link-popover.less';
-@import '../components/elmu-logo.less';
+@import '../components/site-logo.less';
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
 @import '../components/repository-browser.less';
