EDU-36 Rename primary color

--- a/src/components/site-logo.less
+++ b/src/components/site-logo.less
@@ -5,11 +5,11 @@
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
-  color: @global-educandu-blue;
+  color: @global-primary-blue;
 
   &:link, &:visited, &:active, &:hover {
     text-decoration: none;
-    color: @global-educandu-blue;
+    color: @global-primary-blue;
   }
 
   &.SiteLogo--readonly {
