--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -107,7 +107,7 @@
 
   &.u-can-drop {
     .ant-table {
-      border-color: @global-educandu-blue;
+      border-color: @global-primary-blue;
     }
   }
 }
