EDU-26 Adjust search page styles

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -2,5 +2,18 @@
   display: flex;
   width: 100%;
   justify-content: space-around; 
-  margin-bottom: 16px
+  margin-bottom: 16px;
+  font-size: @font-size-lg;
+}
+
+.Search-searchSelectContainer {
+  width: 50%; 
+  .Search-placeholderContainer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .Search-placeholderContainerIcon {
+      align-self: center
+  }
 }
