EDU-26 Adjust styles on the search page

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -1,13 +1,6 @@
-.Search-headerContainer {
-  display: flex;
-  width: 100%;
-  justify-content: space-around; 
-  margin-bottom: 16px;
-  font-size: @font-size-lg;
-}
-
 .Search-searchSelectContainer {
   width: 50%; 
+  margin: 0 0 0 auto;
   .Search-placeholderContainer {
     display: flex;
     justify-content: space-between;
