EDU-55 Reorganize header menus

--- a/src/components/page.less
+++ b/src/components/page.less
@@ -73,7 +73,7 @@
 
 .Page-loginLogoutButton {
   cursor: pointer;
-  margin-left: (2.5 * @global-button-spacing);
+  margin-right: (2.5 * @global-button-spacing);
 }
 
 .Page-contentArea {
