EDU-88 Add global font, headers and primary color styles

--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -69,7 +69,7 @@
   font-family: 'Dancing Script';
   font-size: 72px;
   text-align: center;
-  color: @global-primary-blue;
+  color: @global-primary-color;
   margin: 32px 0;
 }
 
