EDU-88 Add overrides to the test app

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -11,7 +11,7 @@
 @global-button-spacing: 6px;
 
 //Colors
-@global-primary-color: @primary-color;
+@global-primary-color: @blue-7;
 @global-text-color: @text-color;
 @global-heading-color: @heading-color;
 @global-error-color: @error-color;
