--- a/src/styles/ant-overrides.less
+++ b/src/styles/ant-overrides.less
@@ -5,7 +5,7 @@
 // @ant-prefix             : ant;
 
 // // -------- Colors -----------
-@primary-color          : @blue-7;
+@primary-color          : @global-primary-color;
 // @info-color             : @blue-6;
 // @success-color          : @green-6;
 // @processing-color       : @blue-6;
