EDU-88 Update the readme

--- a/test-app/main.less
+++ b/test-app/main.less
@@ -4,8 +4,8 @@
 @global-font-family: 'Roboto', sans-serif;
 
 //Example header size overrides
-//@global-h1-font-size: 5em;
-//@global-h2-font-size: 2.5em;
+@global-h1-font-size: 5em;
+@global-h2-font-size: 2.5em;
 
 //Example layout overrides (original values here)
 @global-content-padding: 12px;
@@ -15,7 +15,7 @@
 @global-button-spacing: 6px;
 
 //Example color overrides
-//@global-primary-color: green;
-//@global-text-color: yellow;
-//@global-heading-color: blue;
-//@global-error-color: pink;
+@global-primary-color: green;
+@global-text-color: yellow;
+@global-heading-color: blue;
+@global-error-color: pink;
