EDU-101 Show sources dropdown on import page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -40,6 +40,7 @@
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/pages/search.less';
+@import '../components/pages/import.less';
 @import '../components/link-popover.less';
 @import '../components/site-logo.less';
 @import '../components/audio-player.less';
