--- a/src/components/pages/import.less
+++ b/src/components/pages/import.less
@@ -4,3 +4,8 @@
   justify-content: space-between;
   align-items: baseline;
 }
+
+.ImportPage-spinner {
+  display: block;
+  margin: 0 0 0 auto;
+}
