EDU-101 Replace Dropdown with Select as the source selector

--- a/src/components/pages/import.less
+++ b/src/components/pages/import.less
@@ -2,11 +2,8 @@
   .m-content;
 }
 
-.ImportPage-sourceButton {
+.ImportPage-source {
   min-width: 280px;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
 }
 
 .ImportPage-spinner {
