EDU-124 Visual improvements

--- a/src/components/pages/import-batches.less
+++ b/src/components/pages/import-batches.less
@@ -1,7 +1,11 @@
-.ImportBatches {
+.ImportBatchesPage {
   .m-content;
 }
 
-.ImportBatches-header { 
+.ImportBatchesPage-header { 
   margin-right: 20px
+}
+
+.ImportBatchesPage-batchTablePanel .ant-collapse-content-box {
+  padding: 0;
 }
