EDU-124 Add icons to task statuses

--- a/src/components/pages/import-batch-view.less
+++ b/src/components/pages/import-batch-view.less
@@ -9,3 +9,16 @@
 .ImportBatchViewPage-tasksTable {
   margin-top: 20px;
 }
+
+.ImportBatchViewPage-warningIcon {
+  color: @global-warning-color
+}
+
+.ImportBatchViewPage-failedIcon {
+  color: @global-error-color;
+}
+
+.ImportBatchViewPage-doneIcon {
+  color: @global-success-color;
+}
+
