--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -15,3 +15,5 @@
 @global-text-color: @text-color;
 @global-heading-color: @heading-color;
 @global-error-color: @error-color;
+@global-warning-color: @warning-color;
+@global-success-color: @success-color;
