--- a/test-app/main.less
+++ b/test-app/main.less
@@ -19,3 +19,5 @@
 @global-text-color: yellow;
 @global-heading-color: blue;
 @global-error-color: pink;
+@global-warning-color: blue;
+@global-success-color: cyan;
