--- a/test-app/main.less
+++ b/test-app/main.less
@@ -1,21 +1,28 @@
 @import url('../dist/styles/main.less');
 
-//Example font family override
-@global-font-family: 'Roboto', sans-serif;
+// Styles for the page templates
+@import url('./bundles/educandu-logo.less');
+@import url('./bundles/educandu-page-template.less');
 
-//Example header size overrides
+@import (css) url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+@educandu-blue: #002f65;
+
+// Example font family override
+@global-font-family: 'Lato', sans-serif;
+
+// Example header size overrides
 @global-h1-font-size: 5em;
 @global-h2-font-size: 2.5em;
 
-//Example layout overrides (original values here)
+// Example layout overrides (original values here)
 @global-content-padding: 12px;
 @global-min-page-width: 200px;
 @global-content-width-wide: 1200px;
 @global-content-width-narrow: 800px;
 @global-button-spacing: 6px;
 
-//Example color overrides
-@global-primary-color: green;
-@global-text-color: yellow;
-@global-heading-color: blue;
-@global-error-color: pink;
+// Example color overrides
+@global-primary-color: @educandu-blue;
+@global-heading-color: @educandu-blue;
+@global-error-color: rgb(100, 0, 17);
