--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -25,7 +25,8 @@
 @import './mixins.less';
 
 // React components
-@import '../components/page.less';
+@import '../components/default-page-template.less';
+@import '../components/default-site-logo.less';
 @import '../components/error-page.less';
 @import '../components/pages/index.less';
 @import '../components/pages/doc.less';
@@ -44,7 +45,6 @@
 @import '../components/pages/import-batches.less';
 @import '../components/pages/import-batch-view.less';
 @import '../components/link-popover.less';
-@import '../components/site-logo.less';
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
 @import '../components/repository-browser.less';
