--- a/src/components/default-page-template.less
+++ b/src/components/default-page-template.less
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   min-height: @default-page-template-header-min-height;
-  background-color: @educandu-blue;
+  background-color: @global-primary-color;
 
   a {
     color: #fff;
