EDU-149 Improve UX on import pages

--- a/src/components/pages/import-batches.less
+++ b/src/components/pages/import-batches.less
@@ -2,10 +2,16 @@
   .m-content;
 }
 
-.ImportBatchesPage-header { 
+.ImportBatchesPage-header {
   margin-right: 20px
 }
 
-.ImportBatchesPage-batchTablePanel .ant-collapse-content-box {
-  padding: 0;
+.ImportBatchesPage-sourceCollapse {
+  margin-bottom: 40px;
+}
+
+.ImportBatchesPage-batchTablePanel {
+  .ant-collapse-content-box {
+    padding: 0;
+  }
 }
