--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -52,6 +52,7 @@
 @import '../components/deleted-section.less';
 @import '../components/credits-footer.less';
 @import '../components/not-supported-section.less';
+@import '../components/document-import-table.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
