--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -53,6 +53,7 @@
 @import '../components/credits-footer.less';
 @import '../components/not-supported-section.less';
 @import '../components/document-import-table.less';
+@import '../components/import-type-icon.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
