EDU-164 Create UI language selection dialog

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -53,6 +53,8 @@
 @import '../components/credits-footer.less';
 @import '../components/not-supported-section.less';
 @import '../components/document-import-table.less';
+@import '../components/ui-language-dialog.less';
+@import '../components/localization/country-flag-and-name.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
