--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -44,6 +44,7 @@
 @import '../components/pages/import-batch-creation.less';
 @import '../components/pages/import-batches.less';
 @import '../components/pages/import-batch-view.less';
+@import '../components/pages/browser-not-supported.less';
 @import '../components/link-popover.less';
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
