EDU-193 Delete the current selection if the file is the currently selected file

--- a/src/components/repository-browser.less
+++ b/src/components/repository-browser.less
@@ -59,6 +59,10 @@
   }
 }
 
+.RepositoryBrowser-tableDeleteCell {
+  color: red;
+}
+
 .RepositoryBrowser-filterInput {
   width: 250px;
   margin-right: 10px;
