--- a/src/styles/ant-overrides.less
+++ b/src/styles/ant-overrides.less
@@ -277,7 +277,7 @@
 // //** Tooltip text color
 // @tooltip-color: #fff;
 // //** Tooltip background color
-// @tooltip-bg: rgba(0, 0, 0, .75);
+@tooltip-bg: lighten(@primary-color, 10%);
 // //** Tooltip arrow width
 // @tooltip-arrow-width: 5px;
 // //** Tooltip distance with trigger
