EDU-165 Add sections to the rooms tab content

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -58,6 +58,7 @@
 @import '../components/localization/country-flag-and-name.less';
 @import '../components/import-type-icon.less';
 @import '../components/cookie-consent-drawer.less';
+@import '../components/rooms-tab.less';
 
 // Pure CSS components
 @import '../styles/panel.less';
