EDU-204 Add GET /rooms endpoint

--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -1,3 +1,11 @@
 .RoomsTab {
   padding-left: 30px;
 }
+
+.RoomsTab-section {
+  padding-top: 100px;
+
+  &:first-of-type {
+    padding-top: 0;
+  }
+}
