--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -45,6 +45,7 @@
 @import '../components/pages/import-batches.less';
 @import '../components/pages/import-batch-view.less';
 @import '../components/pages/browser-not-supported.less';
+@import '../components/pages/room-membership-confirmation.less';
 @import '../components/link-popover.less';
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
