--- a/test-app/main.less
+++ b/test-app/main.less
@@ -4,21 +4,7 @@
 
 @educandu-blue: #002f65;
 
-// Example font family override
+// Example overrides
 @global-font-family: 'Lato', sans-serif;
-
-// Example header size overrides
-@global-h1-font-size: 5em;
-@global-h2-font-size: 2.5em;
-
-// Example layout overrides (original values here)
-@global-content-padding: 12px;
-@global-min-page-width: 200px;
-@global-content-width-wide: 1200px;
-@global-content-width-narrow: 800px;
-@global-button-spacing: 6px;
-
-// Example color overrides
 @global-primary-color: @educandu-blue;
 @global-heading-color: @educandu-blue;
-@global-error-color: rgb(100, 0, 17);
