EDU-218 Streamline tabs styling

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -62,6 +62,7 @@
 @import '../components/rooms-tab.less';
 
 // Pure CSS components
+@import '../styles/tabs.less';
 @import '../styles/panel.less';
 @import '../styles/content.less';
 @import '../styles/section.less';
