EDU-208 Fix test wording and styles

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -1,9 +1,5 @@
 .Room {}
 
-.Room-membersCollapse {
-  margin-top: 16px;
-}
-
-.Room-invitationsCollapse {
+.Room-sectionCollapse {
   margin-top: 16px;
 }
