--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -60,6 +60,7 @@
 @import '../components/import-type-icon.less';
 @import '../components/cookie-consent-drawer.less';
 @import '../components/rooms-tab.less';
+@import '../components/markdown.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
@@ -69,8 +70,6 @@
 
 // Plugin styles
 @import '../plugins/anavis/anavis.less';
-@import '../plugins/markdown/markdown.less';
-@import '../plugins/annotation/annotation.less';
 @import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/audio/audio.less';
