--- a/src/components/pages/settings.less
+++ b/src/components/pages/settings.less
@@ -5,3 +5,14 @@
 .SettingsPage-sectionHeader {
   margin-top: 48px;
 }
+
+.SettingsPage-section {
+  &.SettingsPage-section--announcement {
+    height: 90px;
+  }
+}
+
+.SettingsPage-announcementPreview {
+  display: block;
+  margin-top: 5px;
+}
