--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -11,7 +11,11 @@
   justify-content: space-between;
 }
 
-.Room-lesson {
-  display: block;
+.Room-lessonInfo {
+  display: flex;
   padding: 10px 0;
+}
+
+.Room-lessonWeek {
+  width: 150px;
 }
