EDU-245 Add lesson page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -47,6 +47,7 @@
 @import '../components/pages/browser-not-supported.less';
 @import '../components/pages/room-membership-confirmation.less';
 @import '../components/pages/room.less';
+@import '../components/pages/lesson.less';
 @import '../components/link-popover.less';
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
