--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -63,6 +63,7 @@
 @import '../components/cookie-consent-drawer.less';
 @import '../components/rooms-tab.less';
 @import '../components/markdown.less';
+@import '../components/login-form.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
